Object Texture Coordinate mode not updating in Lookdev / Eevee #66274

Closed
opened 2019-06-30 13:05:16 +02:00 by mantissa · 13 comments

System Information
Operating system: Linux-4.19.51_1-x86_64-with-glibc2.9 64 Bits
Graphics card: TITAN X (Pascal)/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.14

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-29 20:58, hash: be060c3990

Short description of error
When using a separate object to control texture coordinates, moving it around doesn't trigger and update in Lookdev / Eevee.

Exact steps for others to reproduce the error

  • Add texture to Base Color of default cube's material (ex. Noise Texture)
  • Add Texture Coordinate node and connect to texture (ex. Object mode)
  • Create Empty and use this as object at the bottom of Texture Coordinate mode
  • Switch viewport to Lookdev / Eevee
  • Move around Empty object, texture projection doesn't update
  • Reconnecting texture ot Base Color forces update

object_tex_coord.blend

**System Information** Operating system: Linux-4.19.51_1-x86_64-with-glibc2.9 64 Bits Graphics card: TITAN X (Pascal)/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.14 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-29 20:58, hash: `be060c3990` **Short description of error** When using a separate object to control texture coordinates, moving it around doesn't trigger and update in Lookdev / Eevee. **Exact steps for others to reproduce the error** - Add texture to Base Color of default cube's material (ex. Noise Texture) - Add Texture Coordinate node and connect to texture (ex. Object mode) - Create Empty and use this as object at the bottom of Texture Coordinate mode - Switch viewport to Lookdev / Eevee - Move around Empty object, texture projection doesn't update - Reconnecting texture ot Base Color forces update [object_tex_coord.blend](https://archive.blender.org/developer/F7557108/object_tex_coord.blend)
Author

Added subscriber: @Mantissa

Added subscriber: @Mantissa
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

This used to be a limitation, but that was lifted some time ago... (see 04c54dec44)

Your file seems to be working fine here for me.

Is this really failing in a build from builder.blender.org?

This used to be a limitation, but that was lifted some time ago... (see 04c54dec44) Your file seems to be working fine here for me. Is this really failing in a build from builder.blender.org?
Author

Tried a new build, the issue persists for me on Xubuntu 18.04.

Tried a new build, the issue persists for me on Xubuntu 18.04.
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

Hm, still good here (fedora30 5.1.12-300.fc30.x86_64, nvidia 970m 430.26 drivers)

@fclem: does this ring a bell?

Hm, still good here (fedora30 5.1.12-300.fc30.x86_64, nvidia 970m 430.26 drivers) @fclem: does this ring a bell?

@Mantissa what is your build hash?

@Mantissa what is your build hash?
Author

Just tried again today with the latest buildbot: d19d0ff99e
Problem still persists for me.

Here's the file:
object_coord_bug.blend

Just tried again today with the latest buildbot: d19d0ff99e61 Problem still persists for me. Here's the file: [object_coord_bug.blend](https://archive.blender.org/developer/F7574879/object_coord_bug.blend)
Clément Foucault was assigned by Philipp Oeser 2019-07-08 11:02:04 +02:00

It's working here too. I'm sorry to ask you that but are you sure the build hash is the same on your blender splash screen?

I can't believe this is a driver problem since the texture works but does not update.

I just tested on my laptop with Nvidia GPU (linux) and it works too.

It's working here too. I'm sorry to ask you that but are you sure the build hash is the same on your blender splash screen? I can't believe this is a driver problem since the texture works but does not update. I just tested on my laptop with Nvidia GPU (linux) and it works too.
Author

No worries, I got it from the splash screen to begin with.
After resetting everything I can think of I've found that opening an existing file causes it to work correctly.
Creating the setup from scratch however, causes the behavior, so it looks like it's only when the setup is first made in the scene.
I've tried it a few times now and this behavior is repeatable on my machine.

No worries, I got it from the splash screen to begin with. After resetting everything I can think of I've found that opening an existing file causes it to work correctly. Creating the setup from scratch however, causes the behavior, so it looks like it's only when the setup is first made in the scene. I've tried it a few times now and this behavior is repeatable on my machine.

Ok I can reproduce from scratch. I confirm this is a depsgraph issue.

When Working:

graph_id_tag_update: id=OBLight flags=TRANSFORM source=USER_EDIT
graph_id_tag_update: id=OBLight flags=TRANSFORM source=USER_EDIT
[SCScene :: View Layer]: Operation is entry point for update: TRANSFORM_INIT()
[SCScene :: View Layer]: Operation is entry point for update: TRANSFORM_LOCAL()
[SCScene :: View Layer]: Operation is entry point for update: TRANSFORM_EVAL()
[SCScene :: View Layer]: Operation is entry point for update: TRANSFORM_SIMULATION_INIT()
[SCScene :: View Layer]: Operation is entry point for update: TRANSFORM_FINAL()
[SCScene :: View Layer]: Operation is entry point for update: COPY_ON_WRITE()
[SCScene :: View Layer]: Accumulated recalc bits for MAMaterial: 128
[SCScene :: View Layer]: Accumulated recalc bits for NTShader Nodetree: 128
[SCScene :: View Layer]: Accumulated recalc bits for OBLight: 8193
[SCScene :: View Layer]: deg_evaluate_copy_on_write on OBLight (0x7fb3a0ea4c08)
[SCScene :: View Layer]: BKE_object_eval_local_transform on OBLight (0x7fb3a0ea4c08)
[SCScene :: View Layer]: BKE_object_eval_transform_final on OBLight (0x7fb3a0ea4c08)
[SCScene :: View Layer]: BKE_material_eval on MAMaterial (0x7fb3a10f2488)
Depsgraph updated in 0.000362 seconds.

When not working:

graph_id_tag_update: id=OBLight flags=TRANSFORM source=USER_EDIT
graph_id_tag_update: id=OBLight flags=TRANSFORM source=USER_EDIT
[SCScene :: View Layer]: Operation is entry point for update: TRANSFORM_INIT()
[SCScene :: View Layer]: Operation is entry point for update: TRANSFORM_LOCAL()
[SCScene :: View Layer]: Operation is entry point for update: TRANSFORM_EVAL()
[SCScene :: View Layer]: Operation is entry point for update: TRANSFORM_SIMULATION_INIT()
[SCScene :: View Layer]: Operation is entry point for update: TRANSFORM_FINAL()
[SCScene :: View Layer]: Operation is entry point for update: COPY_ON_WRITE()
[SCScene :: View Layer]: Accumulated recalc bits for OBLight: 8193
[SCScene :: View Layer]: deg_evaluate_copy_on_write on OBLight (0x7fb3a0ea4608)
[SCScene :: View Layer]: BKE_object_eval_local_transform on OBLight (0x7fb3a0ea4608)
[SCScene :: View Layer]: BKE_object_eval_transform_final on OBLight (0x7fb3a0ea4608)
Depsgraph updated in 0.000215 seconds.```
Ok I can reproduce from scratch. I confirm this is a depsgraph issue. When Working: ``` graph_id_tag_update: id=OBLight flags=TRANSFORM source=USER_EDIT graph_id_tag_update: id=OBLight flags=TRANSFORM source=USER_EDIT [SCScene :: View Layer]: Operation is entry point for update: TRANSFORM_INIT() [SCScene :: View Layer]: Operation is entry point for update: TRANSFORM_LOCAL() [SCScene :: View Layer]: Operation is entry point for update: TRANSFORM_EVAL() [SCScene :: View Layer]: Operation is entry point for update: TRANSFORM_SIMULATION_INIT() [SCScene :: View Layer]: Operation is entry point for update: TRANSFORM_FINAL() [SCScene :: View Layer]: Operation is entry point for update: COPY_ON_WRITE() [SCScene :: View Layer]: Accumulated recalc bits for MAMaterial: 128 [SCScene :: View Layer]: Accumulated recalc bits for NTShader Nodetree: 128 [SCScene :: View Layer]: Accumulated recalc bits for OBLight: 8193 [SCScene :: View Layer]: deg_evaluate_copy_on_write on OBLight (0x7fb3a0ea4c08) [SCScene :: View Layer]: BKE_object_eval_local_transform on OBLight (0x7fb3a0ea4c08) [SCScene :: View Layer]: BKE_object_eval_transform_final on OBLight (0x7fb3a0ea4c08) [SCScene :: View Layer]: BKE_material_eval on MAMaterial (0x7fb3a10f2488) Depsgraph updated in 0.000362 seconds. ``` When not working: ``` graph_id_tag_update: id=OBLight flags=TRANSFORM source=USER_EDIT graph_id_tag_update: id=OBLight flags=TRANSFORM source=USER_EDIT [SCScene :: View Layer]: Operation is entry point for update: TRANSFORM_INIT() [SCScene :: View Layer]: Operation is entry point for update: TRANSFORM_LOCAL() [SCScene :: View Layer]: Operation is entry point for update: TRANSFORM_EVAL() [SCScene :: View Layer]: Operation is entry point for update: TRANSFORM_SIMULATION_INIT() [SCScene :: View Layer]: Operation is entry point for update: TRANSFORM_FINAL() [SCScene :: View Layer]: Operation is entry point for update: COPY_ON_WRITE() [SCScene :: View Layer]: Accumulated recalc bits for OBLight: 8193 [SCScene :: View Layer]: deg_evaluate_copy_on_write on OBLight (0x7fb3a0ea4608) [SCScene :: View Layer]: BKE_object_eval_local_transform on OBLight (0x7fb3a0ea4608) [SCScene :: View Layer]: BKE_object_eval_transform_final on OBLight (0x7fb3a0ea4608) Depsgraph updated in 0.000215 seconds.```
Clément Foucault removed their assignment 2019-07-08 12:07:46 +02:00
Sergey Sharybin was assigned by Clément Foucault 2019-07-08 12:07:46 +02:00

This issue was referenced by 2b43ec56af

This issue was referenced by 2b43ec56af2a02ff0be1e128b63261bb57cda100

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66274
No description provided.