Fix T66274: Object Texture Coordinate mode not updating in Lookdev / Eevee